fixed styles on mobile view

--- a/shared/site/web/css/base-layout.less
+++ b/shared/site/web/css/base-layout.less
@@ -497,7 +497,7 @@ body {
         margin-top: 1px;
 
         @media screen and (max-width: 650px) {
-            margin-top: 45px;
+            margin-top: 85px;
 
             span {
                 display: block !important;
