--- a/shared/site/web/css/page-teacher.less
+++ b/shared/site/web/css/page-teacher.less
@@ -21,7 +21,7 @@ body#page-teacher {
     text-align: center;
 
     @media screen and (max-width: 650px) {
-      padding-top: 130px;
+      padding-top: 160px;
     }
 
     @media screen and (min-width: 1300px) {
@@ -88,10 +88,13 @@ body#page-teacher {
     #full-desc {
       background: rgba(0, 0, 0, 0.3);
 
+      width: initial;
+      
       padding: 10px;
       padding-left: 20px;
-
+      padding-right: 20px;
       padding-top: 80px;
+
       margin-top: -80px;
 
       text-align: left;
